# FileSorterUsingProcesses

./: CMakeLists.txt  Coach.cpp  Coach.h  CoachFactory.cpp  CoachFactory.h  Coordinator.cpp  Coordinator.h  HeapSorter.cpp  HeapSorter.h  Helper.cpp  Helper.h  PipeReader.cpp  PipeReader.h  PipeWriter.cpp  PipeWriter.h  QuickSorter.cpp  QuickSorter.h  Record.h  RecordReader.cpp  RecordReader.h  Sorter.cpp  Sorter.h  SorterCaller.cpp  SorterCaller.h  SorterTypeFactory.cpp  SorterTypeFactory.h  coordinator.cpp  heapsort.cpp  main.cpp  quicksort.cpp
